--- a/Artivity.Apid.Windows/CopyToOutput.targets
+++ b/Artivity.Apid.Windows/CopyToOutput.targets
@@ -1,5 +1,5 @@
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	  
+
 	<Target Name="AfterBuild">
 	    <Message Text="Copying Plugins..." />
 			<CreateItem Include="$(ProjectDir)\Plugins\**\*.*">
@@ -7,7 +7,7 @@
     	</CreateItem>
 
     	<Copy SourceFiles="@(YourFilesToCopy)"
-    			DestinationFiles="@(YourFilesToCopy->'$(TargetDir)\Plugins\%(RecursiveDir)%(Filename)%(Extension)')" />
+    			DestinationFolder="$(TargetDir)\Plugins\%(RecursiveDir)"/>
 
 	</Target>
 </Project>
