--- a/Artivity.Journal.Mac/Info.plist
+++ b/Artivity.Journal.Mac/Info.plist
@@ -4,8 +4,10 @@
 <dict>
 	<key>CFBundleName</key>
 	<string>Artivity</string>
+	<key>CFBundleExecutable</key>
+	<string>Artivity</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.semiodesk.artivity-journal</string>
+	<string>com.semiodesk.artivity</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
