--- a/Artivity.Apid.Mac/Info.plist
+++ b/Artivity.Apid.Mac/Info.plist
@@ -14,5 +14,7 @@
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.10</string>
+	<key>LSUIElement</key>
+	<string>1</string>
 </dict>
 </plist>
