--- a/Artivity.DataModel/app.config
+++ b/Artivity.DataModel/app.config
@@ -40,8 +40,12 @@
       <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#" Prefix="nfo">
         <FileSource Location="Ontologies/nfo.rdf"/>
       </Ontology>
+
+      <Ontology Uri="http://www.opengis.net/ont/geosparql#" Prefix="geo">
+        <FileSource Location="Ontologies/geo.rdf"/>
+      </Ontology>
       
-      <Ontology Uri="http://semiodesk.com/artivity/1.0/" Prefix="art">
+      <Ontology Uri="http://w3id.org/art/terms/1.0/" Prefix="art">
         <FileSource Location="Ontologies/art.ttl"/>
       </Ontology>
       
