--- a/libartivity/windows/libartivity/libartivity.vcxproj
+++ b/libartivity/windows/libartivity/libartivity.vcxproj
@@ -210,11 +210,13 @@
     <ClInclude Include="..\..\src\ObjectModel\Geometry\Point.h" />
     <ClInclude Include="..\..\src\ObjectModel\Geometry\Rectangle.h" />
     <ClInclude Include="..\..\src\ObjectModel\Geometry\Viewport.h" />
+    <ClInclude Include="..\..\src\ObjectModel\Influence.h" />
     <ClInclude Include="..\..\src\ObjectModel\Influences\Redo.h" />
     <ClInclude Include="..\..\src\ObjectModel\Influences\Save.h" />
     <ClInclude Include="..\..\src\ObjectModel\Influences\Undo.h" />
     <ClInclude Include="..\..\src\ObjectModel\Invalidation.h" />
     <ClInclude Include="..\..\src\ObjectModel\Person.h" />
+    <ClInclude Include="..\..\src\ObjectModel\Revision.h" />
     <ClInclude Include="..\..\src\ObjectModel\Role.h" />
     <ClInclude Include="..\..\src\ObjectModel\SoftwareAgent.h" />
     <ClInclude Include="..\..\src\Ontologies\art.h" />
