Implemented agent negotiation and setting the document in ArtivityLog.

--- a/Artivity.Apid/app.config
+++ b/Artivity.Apid/app.config
@@ -7,7 +7,7 @@
   <connectionStrings>
     <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1111;uid=dba;pw=dba;rule=urn:semiodesk/ruleset" />
   </connectionStrings>
-  <trinity namespace="Artivity.DataModel">
+  <TrinitySettings namespace="Artivity.DataModel">
     <OntologySettings>
 
       <Ontology Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#" Prefix="rdf">
@@ -69,7 +69,7 @@
         </RuleSet>
       </RuleSets>
     </VirtuosoStoreSettings>
-  </trinity>
+  </TrinitySettings>
   <oauth2>
     <services>
       <add clientType="GoogleClient" enabled="true" clientId="APP-AF3XVP6X01AMZQH1" clientSecret="0c883177-cfd8-4a0f-a111-03a5ba19539d" redirectUri="http://localhost:8262/artivity/api/1.0/accounts/orcid/install" />
