--- a/Artivity.DataModel/Artivity.DataModel.csproj
+++ b/Artivity.DataModel/Artivity.DataModel.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ObjectModel\OnlineAccount.cs" />
     <Compile Include="ObjectModel\Person.cs" />
     <Compile Include="ObjectModel\Activity.cs" />
+    <Compile Include="ObjectModel\SoftwareAssociation.cs" />
     <Compile Include="Ontologies\Ontologies.g.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
@@ -90,9 +91,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Ontologies\nao.rdf" />
+    <None Include="Ontologies\nao.rdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Ontologies\owl.n3">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Ontologies\prov.ttl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -104,10 +107,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Ontologies\rdf.rdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Ontologies\rdfs.n3">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Ontologies\xml.rdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
