--- a/libartivity/windows/libartivity/libartivity.vcxproj.filters
+++ b/libartivity/windows/libartivity/libartivity.vcxproj.filters
@@ -165,6 +165,12 @@
     <ClInclude Include="..\..\src\ObjectModel\Activities\WebBrowsing.h">
       <Filter>Header Files\Resources</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\ObjectModel\Entities\VectorImage.h">
+      <Filter>Header Files\Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\ObjectModel\Entities\RasterImage.h">
+      <Filter>Header Files\Resources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\ObjectModel\Activity.cpp">
