Implementing prefix support in serializer.

--- a/Artivity.Apid/app.config
+++ b/Artivity.Apid/app.config
@@ -37,8 +37,8 @@
       <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#" Prefix="nfo">
         <FileSource Location="Ontologies/nfo.rdf" />
       </Ontology>
-      
-      <Ontology Uri="http://semiodesk.com/artivity/1.0/" Prefix="art">
+
+      <Ontology Uri="http://w3id.org/art/terms/1.0/" Prefix="art">
         <FileSource Location="Ontologies/art.ttl" />
       </Ontology>
       
