--- a/libartivity/windows/libartivity/libartivity.vcxproj
+++ b/libartivity/windows/libartivity/libartivity.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="..\..\src\ObjectModel\ActivityInfluence.h" />
     <ClInclude Include="..\..\src\ObjectModel\Agent.h" />
     <ClInclude Include="..\..\src\ObjectModel\Association.h" />
+    <ClInclude Include="..\..\src\ObjectModel\Change.h" />
     <ClInclude Include="..\..\src\ObjectModel\Derivation.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\FileDataObject.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\Image.h" />
@@ -214,10 +215,11 @@
     <ClInclude Include="..\..\src\ObjectModel\Geometry\Viewport.h" />
     <ClInclude Include="..\..\src\ObjectModel\Influence.h" />
     <ClInclude Include="..\..\src\ObjectModel\Influences\Redo.h" />
-    <ClInclude Include="..\..\src\ObjectModel\Influences\Save.h" />
     <ClInclude Include="..\..\src\ObjectModel\Influences\Undo.h" />
     <ClInclude Include="..\..\src\ObjectModel\Invalidation.h" />
+    <ClInclude Include="..\..\src\ObjectModel\PartialRenderingDataObject.h" />
     <ClInclude Include="..\..\src\ObjectModel\Person.h" />
+    <ClInclude Include="..\..\src\ObjectModel\RenderingDataObject.h" />
     <ClInclude Include="..\..\src\ObjectModel\Revision.h" />
     <ClInclude Include="..\..\src\ObjectModel\Role.h" />
     <ClInclude Include="..\..\src\ObjectModel\SoftwareAgent.h" />
