--- a/libartivity/windows/libartivity/libartivity.vcxproj
+++ b/libartivity/windows/libartivity/libartivity.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="..\..\src\ObjectModel\Change.h" />
     <ClInclude Include="..\..\src\ObjectModel\Derivation.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\FileDataObject.h" />
+    <ClInclude Include="..\..\src\ObjectModel\Entities\Folder.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\Image.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\InformationElement.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\Media.h" />
@@ -230,6 +231,7 @@
     <ClInclude Include="..\..\src\Ontologies\nie.h" />
     <ClInclude Include="..\..\src\Ontologies\prov.h" />
     <ClInclude Include="..\..\src\Ontologies\rdf.h" />
+    <ClInclude Include="..\..\src\Ontologies\rdfs.h" />
     <ClInclude Include="..\..\src\Ontologies\svg.h" />
     <ClInclude Include="..\..\src\Ontologies\unit.h" />
     <ClInclude Include="..\..\src\Ontologies\xml.h" />
@@ -249,6 +251,7 @@
     <ClCompile Include="..\..\src\EditingSession.cpp" />
     <ClCompile Include="..\..\src\ObjectModel\Activity.cpp" />
     <ClCompile Include="..\..\src\ObjectModel\Entities\FileDataObject.cpp" />
+    <ClCompile Include="..\..\src\ObjectModel\Entities\Image.cpp" />
     <ClCompile Include="..\..\src\ObjectModel\Entities\InformationElement.cpp" />
     <ClCompile Include="..\..\src\PropertyMap.cpp" />
     <ClCompile Include="..\..\src\Resource.cpp" />
