Added Layer. Save does not need to be implemented in EditingSession. Fixed a bug in PropertyMap.

--- a/libartivity/windows/libartivity/libartivity.vcxproj
+++ b/libartivity/windows/libartivity/libartivity.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="..\..\src\ObjectModel\Entities\Folder.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\Image.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\InformationElement.h" />
+    <ClInclude Include="..\..\src\ObjectModel\Entities\Layer.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\Media.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\RasterImage.h" />
     <ClInclude Include="..\..\src\ObjectModel\Entities\VectorImage.h" />
