Implemented query for influences in APID.

--- a/Artivity.Apid.Windows/app.config
+++ b/Artivity.Apid.Windows/app.config
@@ -22,7 +22,7 @@
       </Ontology>
 
       <Ontology Uri="http://www.w3.org/ns/prov#" Prefix="prov">
-        <FileSource Location="Ontologies/prov.ttl" />
+        <FileSource Location="Ontologies/prov.rdf" />
       </Ontology>
 
       <Ontology Uri="http://www.w3.org/2001/04/infoset#" Prefix="xml">
