--- a/libartivity/windows/libartivity/libartivity.vcxproj
+++ b/libartivity/windows/libartivity/libartivity.vcxproj
@@ -261,6 +261,7 @@
     <ClCompile Include="..\..\src\ObjectModel\Influences\Redo.cpp" />
     <ClCompile Include="..\..\src\ObjectModel\Influences\Undo.cpp" />
     <ClCompile Include="..\..\src\ObjectModel\PartialRenderingDataObject.cpp" />
+    <ClCompile Include="..\..\src\ObjectModel\RenderingDataObject.cpp" />
     <ClCompile Include="..\..\src\PropertyMap.cpp" />
     <ClCompile Include="..\..\src\Resource.cpp" />
     <ClCompile Include="..\..\src\Serializer.cpp" />
